simplified EnumAttribute constructor